# rtcloud-projects

./: .gitignore  README.md
mindeye/: .gitattributes  .gitignore  BidsDir  README.md  Untitled.ipynb  bashrc_mindeye  bidsRun.py  config.json  debug_betas.ipynb  mindeye.ipynb  mindeye.py  mindeye_6_21_2024.py  mindeye_no_sliceTimed.py  mise.toml  requirements.txt  rt_mindEye2.yml  rtcloud.yml  utils_glm.py  utils_mindeye.py
mindeye/.ipynb_checkpoints/: bashrc_mindeye-checkpoint  mindeye-checkpoint.ipynb  mindeye-checkpoint.py
mindeye/BidsDir/: dataset_description.json  participants.tsv
mindeye/BidsDir/sub-01/ses-nsd02/func/: sub-01_ses-nsd02_task-nsdcore_run-01_bold.json  sub-01_ses-nsd02_task-nsdcore_run-01_events.tsv  sub-01_ses-nsd02_task-nsdcore_run-01_sbref.json
mindeye/conf/: bashrc_mindeye  config.json  config_example.json  mindeye.toml  pyproject.toml
mindeye/config/: bashrc_mindeye  config.json  pyproject.toml
mindeye/docs/: 00-pipeline.md  01-quickstart_simulation.md  02-quickstart_realtime.md  03-experiment_guide.md  experiment_guide.md  quickstart_realtime.md  quickstart_simulated-realtime.md  quickstart_simulation.md
mindeye/models/: models.py
mindeye/models/generative_models/sgm/modules/autoencoding/: temporal_ae.py
mindeye/models/generative_models/sgm/modules/diffusionmodules/: sampling.py
mindeye/psychopy_example/: rtcloud_psychopy.py
mindeye/scripts/: mindeye.ipynb  mindeye.py
movienf/: .gitignore  README.md  movienf.py  movienf_task.py  run_movienf.py  templatematch.py
movienf/dicomDir/: 001_000012_000001.dcm  001_000012_000002.dcm  001_000012_000003.dcm  001_000012_000004.dcm  001_000012_000005.dcm  001_000012_000006.dcm  001_000012_000007.dcm  001_000012_000008.dcm  001_000012_000009.dcm  001_000012_000010.dcm  001_000012_000011.dcm  001_000012_000012.dcm  001_000012_000013.dcm  001_000012_000014.dcm  001_000012_000015.dcm  001_000012_000016.dcm  001_000012_000017.dcm  001_000012_000018.dcm  001_000012_000019.dcm  001_000012_000020.dcm  001_000012_000021.dcm  001_000012_000022.dcm  001_000012_000023.dcm  001_000012_000024.dcm  001_000012_000025.dcm  001_000012_000026.dcm  001_000012_000027.dcm  001_000012_000028.dcm  001_000012_000029.dcm  001_000012_000030.dcm  001_000012_000031.dcm  001_000012_000032.dcm  001_000012_000033.dcm  001_000012_000034.dcm  001_000012_000035.dcm  001_000012_000036.dcm  001_000012_000037.dcm  001_000012_000038.dcm  001_000012_000039.dcm  001_000012_000040.dcm  (+1189 more)
sample/: README.md
template/: README.md
