[project]
name = "mindeye"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "absl-py==2.3.0",
    "accelerate==0.24.1",
    "acres==0.5.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.13",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "antspyx==0.5.4",
    "anyio==4.9.0",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "astor==0.8.1",
    "asttokens==3.0.0",
    "async-lru==2.0.5",
    "attrs==25.3.0",
    "babel==2.17.0",
    "bcrypt==3.2.0",
    "beartype==0.21.0",
    "beautifulsoup4==4.13.4",
    "bids==0.0",
    "bids-validator==1.14.7.post0",
    "bidsschematools==1.0.10",
    "bleach==6.2.0",
    "boto3==1.34.117",
    "botocore==1.34.117",
    "braceexpand==0.1.7",
    "certifi==2025.6.15",
    "cffi==1.16.0",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "clip",
    "coca-pytorch==0.1.0",
    "comm==0.2.2",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "dalle2-pytorch==1.15.6",
    "datasets==2.14.4",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "deepspeed==0.13.1",
    "defusedxml==0.7.1",
    "diffusers==0.23.0",
    "dill==0.3.7",
    "docopt==0.6.2",
    "einops==0.8.1",
    "einx==0.3.0",
    "ema-pytorch==0.7.7",
    "embedding-reader==1.7.0",
    "evaluate==0.4.1",
    "executing==2.2.0",
    "fastjsonschema==2.21.1",
    "filelock==3.18.0",
    "fonttools==4.58.4",
    "formulaic==0.3.4",
    "fqdn==1.5.1",
    "frozendict==2.4.6",
    "frozenlist==1.7.0",
    "fsspec==2025.5.1",
    "ftfy==6.3.1",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "greenlet==3.2.3",
    "h11==0.16.0",
    "h5py==3.10.0",
    "hf-xet==1.1.4",
    "hjson==3.1.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub<0.26.0",
    "idna==3.10",
    "imageio==2.37.0",
    "importlib-metadata==8.7.0",
    "importlib-resources==6.5.2",
    "inotify==0.2.10",
    "interface-meta==1.3.0",
    "ipykernel==6.29.5",
    "ipython==9.3.0",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.7",
    "isoduration==20.11.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jmespath==1.0.1",
    "joblib==1.5.1",
    "json5==0.12.0",
    "jsonpointer==3.0.0",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "jupyter==1.1.1",
    "jupyter-client==8.6.3",
    "jupyter-console==6.6.3",
    "jupyter-core==5.8.1",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.2.5",
    "jupyter-server==2.16.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.4.3",
    "jupyterlab-nvdashboard==0.13.0",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "jupyterlab-widgets==3.0.15",
    "kiwisolver==1.4.8",
    "kornia==0.7.1",
    "lazy-loader==0.4",
    "lightning-utilities==0.14.3",
    "lxml==5.4.0",
    "markupsafe==3.0.2",
    "matplotlib==3.8.2",
    "matplotlib-inline==0.1.7",
    "mistune==3.1.3",
    "mpmath==1.3.0",
    "multidict>=6.0.0,!=6.5.0",
    "multiprocess==0.70.15",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.5",
    "nibabel==5.3.2",
    "nilearn==0.11.1",
    "ninja==1.11.1.4",
    "nltk==3.8.1",
    "nose==1.3.7",
    "notebook==7.4.3",
    "notebook-shim==0.2.4",
    "num2words==0.5.14",
    "numpy==1.26.4",
    "nvidia-cublas-cu12==12.1.3.1",
    "nvidia-cuda-cupti-cu12==12.1.105",
    "nvidia-cuda-runtime-cu12==12.1.105",
    "nvidia-cudnn-cu12==8.9.2.26",
    "nvidia-cufft-cu12==11.0.2.54",
    "nvidia-curand-cu12==10.3.2.106",
    "nvidia-cusolver-cu12==11.4.5.107",
    "nvidia-cusparse-cu12==12.1.0.106",
    "nvidia-ml-py==12.575.51",
    "nvidia-nccl-cu12==2.18.1",
    "nvidia-nvjitlink-cu12==12.9.86",
    "nvidia-nvtx-cu12==12.1.105",
    "omegaconf==2.3.0",
    "open-clip-torch==2.24.0",
    "overrides==7.7.0",
    "packaging==25.0",
    "pandas==2.2.0",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "patsy==1.0.1",
    "pexpect==4.9.0",
    "pillow==11.2.1",
    "platformdirs==4.3.8",
    "plumbum==1.9.0",
    "prometheus-client==0.22.1",
    "prompt-toolkit==3.0.51",
    "propcache==0.3.2",
    "protobuf==6.31.1",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "py-cpuinfo==9.0.0",
    "pyarrow==15.0.2",
    "pybids==0.15.3",
    "pycparser==2.21",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydicom==3.0.1",
    "pygments==2.19.1",
    "pynvml==12.0.0",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "python-json-logger==3.3.0",
    "pytorch-lightning==2.0.1",
    "pytorch-warmup==0.2.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "pyzmq==27.0.0",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.4",
    "resize-right==0.0.2",
    "responses==0.18.0",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rotary-embedding-torch==0.8.6",
    "rouge-score==0.1.2",
    "rpds-py==0.25.1",
    "rpyc==6.0.2",
    "s3transfer==0.10.4",
    "safetensors==0.5.3",
    "scikit-image==0.22.0",
    "scikit-learn==1.7.0",
    "scipy==1.15.3",
    "send2trash==1.8.3",
    "sentence-transformers==2.5.1",
    "sentencepiece==0.2.0",
    "sentry-sdk==2.30.0",
    "setproctitle==1.3.6",
    "setuptools==68.2.2",
    "six==1.16.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "sqlalchemy==1.3.24",
    "stack-data==0.6.3",
    "statsmodels==0.14.4",
    "sympy==1.14.0",
    "terminado==0.18.1",
    "threadpoolctl==3.6.0",
    "tifffile==2025.6.11",
    "timm==1.0.15",
    "tinycss2==1.4.0",
    "tokenizers==0.15.2",
    "toml==0.10.2",
    "torch==2.1.0",
    "torch-fidelity==0.3.0",
    "torchmetrics==1.3.0.post0",
    "torchvision==0.16.0",
    "tornado==6.5.1",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.37.2",
    "triton==2.1.0",
    "types-python-dateutil==2.9.0.20250516",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "umap==0.1.1",
    "universal-pathlib==0.2.6",
    "uri-template==1.3.0",
    "urllib3==2.2.1",
    "vector-quantize-pytorch==1.22.17",
    "wandb==0.20.1",
    "watchdog==4.0.1",
    "wcwidth==0.2.13",
    "webcolors==24.11.1",
    "webdataset==0.2.73",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "widgetsnbextension==4.0.14",
    "wrapt==1.17.2",
    "x-clip==0.14.4",
    "xformers==0.0.22.post7",
    "xxhash==3.5.0",
    "yarl==1.20.1",
    "zipp==3.20.0",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git", rev = "dcba3cb2e2827b402d2701e7e1c7d9fed8a20ef1" }
