[project]
name = "mindeye"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "absl-py",
    "accelerate",
    "acres",
    "aiohappyeyeballs",
    "aiohttp",
    "aiosignal",
    "annotated-types",
    "antlr4-python3-runtime",
    "antspyx",
    "anyio",
    "argon2-cffi",
    "argon2-cffi-bindings",
    "arrow",
    "astor",
    "asttokens",
    "async-lru",
    "attrs",
    "babel",
    "bcrypt",
    "beartype",
    "beautifulsoup4",
    "bids",
    "bids-validator",
    "bidsschematools",
    "bleach",
    "boto3",
    "botocore",
    "braceexpand",
    "certifi",
    "cffi",
    "charset-normalizer",
    "click",
    "clip",
    "clip-anytorch",
    "coca-pytorch",
    "comm",
    "contourpy",
    "cycler",
    "dalle2-pytorch",
    "datasets",
    "debugpy",
    "decorator",
    "deepspeed",
    "defusedxml",
    "diffusers",
    "dill",
    "docopt",
    "einops",
    "einx",
    "ema-pytorch",
    "embedding-reader",
    "evaluate",
    "executing",
    "fastjsonschema",
    "filelock",
    "fonttools",
    "formulaic",
    "fqdn",
    "frozendict",
    "frozenlist",
    "fsspec",
    "ftfy",
    "gitdb",
    "gitpython",
    "greenlet",
    "h11",
    "h5py",
    "hf-xet",
    "hjson",
    "httpcore",
    "httpx",
    "huggingface-hub",
    "idna",
    "imageio",
    "importlib-metadata",
    "importlib-resources",
    "inotify",
    "interface-meta",
    "ipykernel",
    "ipython",
    "ipython-pygments-lexers",
    "ipywidgets",
    "isoduration",
    "jedi",
    "jinja2",
    "jmespath",
    "joblib",
    "json5",
    "jsonpointer",
    "jsonschema",
    "jsonschema-specifications",
    "jupyter",
    "jupyter-client",
    "jupyter-console",
    "jupyter-core",
    "jupyter-events",
    "jupyter-lsp",
    "jupyter-server",
    "jupyter-server-terminals",
    "jupyterlab",
    "jupyterlab-nvdashboard",
    "jupyterlab-pygments",
    "jupyterlab-server",
    "jupyterlab-widgets",
    "kiwisolver",
    "kornia",
    "lazy-loader",
    "lightning-utilities",
    "lxml",
    "markupsafe",
    "matplotlib",
    "matplotlib-inline",
    "mistune",
    "mpmath",
    "multidict",
    "multiprocess",
    "nbclient",
    "nbconvert",
    "nbformat",
    "nest-asyncio",
    "networkx",
    "nibabel",
    "nilearn",
    "ninja",
    "nltk",
    "nose",
    "notebook",
    "notebook-shim",
    "num2words",
    "numpy",
    "nvidia-cublas-cu12",
    "nvidia-cuda-cupti-cu12",
    "nvidia-cuda-nvrtc-cu12",
    "nvidia-cuda-runtime-cu12",
    "nvidia-cudnn-cu12",
    "nvidia-cufft-cu12",
    "nvidia-curand-cu12",
    "nvidia-cusolver-cu12",
    "nvidia-cusparse-cu12",
    "nvidia-ml-py",
    "nvidia-nccl-cu12",
    "nvidia-nvjitlink-cu12",
    "nvidia-nvtx-cu12",
    "omegaconf",
    "open-clip-torch",
    "overrides",
    "packaging",
    "pandas",
    "pandocfilters",
    "parso",
    "patsy",
    "pexpect",
    "pillow",
    "platformdirs",
    "plumbum",
    "prometheus-client",
    "prompt-toolkit",
    "propcache",
    "protobuf",
    "psutil",
    "ptyprocess",
    "pure-eval",
    "py-cpuinfo",
    "pyarrow",
    "pybids",
    "pycparser",
    "pydantic",
    "pydantic-core",
    "pydicom",
    "pygments",
    "pynvml",
    "pyparsing",
    "python-dateutil",
    "python-json-logger",
    "pytorch-lightning",
    "pytorch-warmup",
    "pytz",
    "pyyaml",
    "pyzmq",
    "referencing",
    "regex",
    "requests",
    "resize-right",
    "responses",
    "rfc3339-validator",
    "rfc3986-validator",
    "rotary-embedding-torch",
    "rouge-score",
    "rpds-py",
    "rpyc",
    "s3transfer",
    "safetensors",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "send2trash",
    "sentence-transformers",
    "sentencepiece",
    "sentry-sdk",
    "setproctitle",
    "setuptools",
    "six",
    "smmap",
    "sniffio",
    "soupsieve",
    "sqlalchemy",
    "stack-data",
    "statsmodels",
    "sympy",
    "terminado",
    "threadpoolctl",
    "tifffile",
    "timm",
    "tinycss2",
    "tokenizers",
    "toml",
    "torch",
    "torch-fidelity",
    "torchmetrics",
    "torchvision",
    "tornado",
    "tqdm",
    "traitlets",
    "transformers",
    "triton",
    "types-python-dateutil",
    "typing-extensions",
    "typing-inspection",
    "tzdata",
    "umap",
    "universal-pathlib",
    "uri-template",
    "urllib3",
    "vector-quantize-pytorch",
    "wandb",
    "watchdog",
    "wcwidth",
    "webcolors",
    "webdataset",
    "webencodings",
    "websocket-client",
    "widgetsnbextension",
    "wrapt",
    "x-clip",
    "xformers",
    "xxhash",
    "yarl",
    "zipp",
]
